Left right desktop image scaling (cropping issue)

--- a/style.css
+++ b/style.css
@@ -1427,6 +1427,7 @@ figcaption {
 .right > img {
   object-fit: cover;
   width: 20vw;
+  height: 20vw;
 }
 
 .left-right-content {
